--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 management.security.enabled=false
 
 spring.datasource.name=ecommercedb
-spring.jpa.show-sql=false
+spring.datasource.url=jdbc:sqlserver://sql-xbdqr54uc6n6e.database.windows.net:1433;database=appdb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=test
+spring.datasource.password=Spring123##
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
 #H2 settings
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
