--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-web</artifactId> 
     </dependency>  
+    <dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
     <!-- tag::actuator[] -->  
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
@@ -56,9 +61,7 @@
 	</dependency>
         
   </dependencies>  
-
   
-
   <build> 
     <plugins> 
       <plugin> 
